<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.basic.im.modules</groupId>
    <artifactId>im-comm-modules</artifactId>
    <packaging>pom</packaging>

    <version>1.0</version>
    <properties>
        <revision>1.0</revision>
        <badic-commom.version>1.0</badic-commom.version>
        <im-module.vserion>1.0</im-module.vserion>
        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
        <spring-boot-data.version>1.1.0</spring-boot-data.version>

        <lombok.version>1.18.34</lombok.version>
        <fastjson.version>1.2.83</fastjson.version>
        <hutool.version>5.8.33</hutool.version>
        <guava.version>33.3.1-jre</guava.version>
        <jackson-databind.version>2.18.1</jackson-databind.version>
        <httpasyncclient.version>4.1.3</httpasyncclient.version>
        <httpclient.version>4.5.6</httpclient.version>
        <httpcore.version>4.4.10</httpcore.version>
        <commons-io.version>1.3.2</commons-io.version>
        <commons-httpclient.version>3.1</commons-httpclient.version>
        <tomcat.version>9.0.95</tomcat.version>
        <jdom2.version>2.0.6</jdom2.version>

        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    </properties>
    <modules>
        <module>im-core-module</module>
        <module>comm-maven-pom</module>
        <module>user-module/user-core</module>
        <module>room-module/room-core</module>
        <module>room-module</module>
        <module>friend-module</module>
        <module>open-module</module>
        <module>sms-module</module>
        <module>company-module</module>
        <!--<module>customer-module</module>-->
        <module>live-module</module>
        <module>msg-module</module>
        <module>user-module</module>
        <module>mp-module</module>
        <module>message-module</module>
        <module>admin-console</module>
        <module>timed-task-module</module>
        <module>security-module</module>
        <module>api-module/api-core</module>
        <module>api-module</module>
         <module>other-module</module>
        <module>message-push-module</module>
        <module>push-services-module</module>
        <module>common-api</module>
        <module>pay-module</module>
        <module>pay-api-module</module>
        <module>redpack-module</module>
        <module>manual-pay-module</module>
        <!-- <module>invite-module</module>-->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <!-- swagger注解依赖  -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>2.9.2</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework</groupId>
                        <artifactId>spring-context</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.basic.redisson</groupId>
                <artifactId>basic-redisson</artifactId>
                <version>1.0.3</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-core</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>top.lrshuai.encryption</groupId>
                <artifactId>encryption-tools</artifactId>
                <version>1.0.0</version>
            </dependency>
            <!-- 二维码依赖 -->
            <dependency>
                <groupId>org.iherus</groupId>
                <artifactId>qrext4j</artifactId>
                <version>1.3.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <!-- 要将源码放上去，需要加入这个插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>

        <repository>
            <id>releases</id>
            <name>releases</name>
            <url>http://192.168.101.80:8081/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>snapshots</name>
            <url>http://192.168.101.80:8081/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>


</project>
